--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </main>
 
     <footer>
-        <p>&copy;2025 YourName</p>
+        <p>&copy;2025 Rebaone</p>
     </footer>
 </body>
+
 </html>
