--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     </main>
 
     <footer>
-        <p>&copy;2025 Rebaone</p>
+        <p>&copy;2025 YourName</p>
     </footer>
 </body>
-
 </html>
-
