--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </main>
 
     <footer>
-        <p>&copy;2025 YourName</p>
+        <p>&copy;2026 Rebaone</p>
     </footer>
 </body>
 </html>
