--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" contact="width=device-width,initial-scale=1.0">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
